--- a/CRISPR_env.yml
+++ b/CRISPR_env.yml
@@ -1,4 +1,4 @@
-name: CRISPR_env
+name: final
 channels:
   - defaults
 dependencies:
@@ -21,6 +21,7 @@ dependencies:
   - zlib=1.2.12=h7f8727e_2
   - pip:
     - absl-py==0.15.0
+    - adjusttext==1.1.1
     - anndata==0.9.2
     - appdirs==1.4.4
     - asttokens==2.4.1
@@ -28,6 +29,7 @@ dependencies:
     - attrs==23.2.0
     - backcall==0.2.0
     - beautifulsoup4==4.12.3
+    - bioinfokit==2.1.3
     - bioservices==1.11.2
     - cachetools==5.3.2
     - captum==0.4.0
@@ -76,6 +78,7 @@ dependencies:
     - markupsafe==2.1.5
     - matplotlib==3.7.5
     - matplotlib-inline==0.1.6
+    - matplotlib-venn==0.11.10
     - mpmath==1.3.0
     - multiseq==0.1.0
     - natsort==8.4.0
@@ -98,7 +101,7 @@ dependencies:
     - openpyxl==3.1.2
     - opt-einsum==3.3.0
     - packaging==23.2
-    - pandas==2.0.0
+    - pandas==2.0.3
     - parso==0.8.3
     - patsy==0.5.6
     - pexpect==4.9.0
@@ -125,7 +128,7 @@ dependencies:
     - scanpy==1.9.6
     - scikit-learn==1.3.2
     - scipy==1.10.1
-    - seaborn==0.11.2
+    - seaborn==0.13.2
     - session-info==1.0.0
     - shap==0.42.1
     - six==1.15.0
@@ -136,12 +139,14 @@ dependencies:
     - stdlib-list==0.10.0
     - suds-community==1.1.2
     - sympy==1.12
+    - tabulate==0.9.0
     - tensorboard==2.11.2
     - tensorboard-data-server==0.6.1
     - tensorboard-plugin-wit==1.8.1
     - tensorflow==2.4.1
     - tensorflow-estimator==2.4.0
     - termcolor==1.1.0
+    - textwrap3==0.9.2
     - threadpoolctl==3.3.0
     - tomli==2.0.1
     - torch==1.10.1
@@ -161,3 +166,4 @@ dependencies:
     - zope.event==5.0
     - zope.interface==6.2
 prefix: /data/data_hermet/anaconda3/envs/final
+
